--- a/info/description.html
+++ b/info/description.html
@@ -1,15 +1,15 @@
 <p>
-	In this mission you should write a function that introduces a person with the given parameters in attributes.
+	Find size of the given array
 </p>
 
 
 
 <p>
-    <strong>Input: </strong> Two arguments. String and positive integer.
+    <strong>Input: </strong> Array.
 </p>
 
 <p>
-    <strong>Output: </strong> String.
+    <strong>Output: </strong> Int.
 </p>
 
 
@@ -20,12 +20,12 @@
     </p>
 
 {% if interpreter.slug == "js-node" %}
-<pre class="brush: javascript">sayHi("Alex", 32) == "Hi. My name is Alex and I'm 32 years old"
-sayHi("Frank", 68) == "Hi. My name is Frank and I'm 68 years old"
+<pre class="brush: javascript">arrSize([1, 2, 3]) == 3
+arrSize([]) == 0
 </pre>
 {% else %}
-<pre class="brush: python">say_hi("Alex", 32) == "Hi. My name is Alex and I'm 32 years old"
-say_hi("Frank", 68) == "Hi. My name is Frank and I'm 68 years old"
+<pre class="brush: python">arr_size([1, 2, 3]) == 3
+arr_size([]) == 0
 </pre>
 {% endif %}
 </div>
